--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pm2-prometheus-exporter",
-  "version": "0.1.1",
+  "name": "pm2-prom-exporter",
+  "version": "1.0.0",
   "description": "PM2 metric exporter for Prometheus",
   "main": "exporter.js",
   "dependencies": {
@@ -10,10 +10,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/tgmproject/pm2-prometheus-exporter.git"
-  },
-  "config": {
-    "conf_var_1": true,
-    "conf_var_2": "myvalue"
   },
   "apps": [
     {
